{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 35,
  "lineage": "f1627020-5b19-2cda-e2a3-dce89974bb6e",
  "resources": [
    {
      "module": "module.Customer_SH",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-customer/0ef06b2ee3d505b7",
            "arn_suffix": "app/prod-splunk-alb-customer/0ef06b2ee3d505b7",
            "dns_name": "prod-splunk-alb-customer-1396673613.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-customer/0ef06b2ee3d505b7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-customer",
            "security_groups": [
              "sg-039a5030e17633970"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-customer",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Customer_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Customer_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-customer/0ef06b2ee3d505b7/c44b338071e3136c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-customer/0ef06b2ee3d505b7/c44b338071e3136c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-customer/0ef06b2ee3d505b7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.Customer_SH.aws_alb.load_balancer",
            "module.Customer_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Customer_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-customer/0ef06b2ee3d505b7/9129e2269dc64578",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-customer/28ec84f1de672610",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-customer/0ef06b2ee3d505b7/9129e2269dc64578",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-customer/0ef06b2ee3d505b7",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.Customer_SH.aws_alb.load_balancer",
            "module.Customer_SH.aws_alb_target_group.lb_target_8000",
            "module.Customer_SH.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.Customer_SH",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-customer/28ec84f1de672610",
            "arn_suffix": "targetgroup/prod-splunk-alb-8000-customer/28ec84f1de672610",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/en-US/account/login",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-customer/28ec84f1de672610",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8000-customer",
            "port": 8000,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8000-customer",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Customer_SH.aws_alb.load_balancer",
            "module.Customer_SH.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Customer_SH",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-06fdb445b6a9c80ff",
            "description": "Security group for splunk sh and forwarders instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fdb445b6a9c80ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-039a5030e17633970"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-splunk-instance-customer",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-instance-customer",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Customer_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Customer_SH",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-039a5030e17633970",
            "description": "Security group for splunk ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039a5030e17633970",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "prod-splunk-alb-customer",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-customer",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.Enterprise_SH",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed",
            "arn_suffix": "app/prod-splunk-alb-enterprise/d2b6f8813105c6ed",
            "dns_name": "prod-splunk-alb-enterprise-1156362694.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-enterprise",
            "security_groups": [
              "sg-03c5dd2f197d66bc0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-enterprise",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Enterprise_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Enterprise_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed/5ce67e1300ff070e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed/5ce67e1300ff070e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.Enterprise_SH.aws_alb.load_balancer",
            "module.Enterprise_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Enterprise_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed/f909e70b1b98d66e",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-enterprise/681359f7534f8b27",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed/f909e70b1b98d66e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-enterprise/d2b6f8813105c6ed",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.Enterprise_SH.aws_alb.load_balancer",
            "module.Enterprise_SH.aws_alb_target_group.lb_target_8000",
            "module.Enterprise_SH.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.Enterprise_SH",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-enterprise/681359f7534f8b27",
            "arn_suffix": "targetgroup/prod-splunk-alb-8000-enterprise/681359f7534f8b27",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/en-US/account/login",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-enterprise/681359f7534f8b27",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8000-enterprise",
            "port": 8000,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8000-enterprise",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Enterprise_SH.aws_alb.load_balancer",
            "module.Enterprise_SH.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Enterprise_SH",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-0b7438182a5794bba",
            "description": "Security group for splunk sh and forwarders instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7438182a5794bba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c5dd2f197d66bc0"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-splunk-instance-enterprise",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-instance-enterprise",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Enterprise_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Enterprise_SH",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-03c5dd2f197d66bc0",
            "description": "Security group for splunk ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c5dd2f197d66bc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "prod-splunk-alb-enterprise",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-enterprise",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-security/54af86bde2f66530",
            "arn_suffix": "app/prod-splunk-alb-security/54af86bde2f66530",
            "dns_name": "prod-splunk-alb-security-269355020.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-security/54af86bde2f66530",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-security",
            "security_groups": [
              "sg-00186afe88248ccd0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-security",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Security_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-security/54af86bde2f66530/967303ebc3912246",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-security/54af86bde2f66530/967303ebc3912246",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-security/54af86bde2f66530",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.Security_SH.aws_alb.load_balancer",
            "module.Security_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-security/54af86bde2f66530/82927ef465210bc1",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-security/184267379eb9eff1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-security/54af86bde2f66530/82927ef465210bc1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-security/54af86bde2f66530",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.Security_SH.aws_alb.load_balancer",
            "module.Security_SH.aws_alb_target_group.lb_target_8000",
            "module.Security_SH.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_8089",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-security/54af86bde2f66530/1640b3198a81f100",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8089-security/fea03cae1ef02244",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-security/54af86bde2f66530/1640b3198a81f100",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-security/54af86bde2f66530",
            "port": 8089,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.Security_SH.aws_alb.load_balancer",
            "module.Security_SH.aws_alb_target_group.lb_target_8089",
            "module.Security_SH.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-security/184267379eb9eff1",
            "arn_suffix": "targetgroup/prod-splunk-alb-8000-security/184267379eb9eff1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/en-US/account/login",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-security/184267379eb9eff1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8000-security",
            "port": 8000,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8000-security",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Security_SH.aws_alb.load_balancer",
            "module.Security_SH.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8089",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8089-security/fea03cae1ef02244",
            "arn_suffix": "targetgroup/prod-splunk-alb-8089-security/fea03cae1ef02244",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8089-security/fea03cae1ef02244",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8089-security",
            "port": 8089,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8089-security",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Security_SH.aws_alb.load_balancer",
            "module.Security_SH.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-0a9b9aa7869cb08bb",
            "description": "Security group for splunk sh and forwarders instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9b9aa7869cb08bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00186afe88248ccd0"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-splunk-instance-security",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-instance-security",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.Security_SH.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security_SH",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-00186afe88248ccd0",
            "description": "Security group for splunk ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00186afe88248ccd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "63.128.80.0/24",
                  "53.70.76.8/32",
                  "63.128.86.0/24",
                  "52.23.191.219/32",
                  "3.86.21.143/32"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "prod-splunk-alb-security",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-security",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.common",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_ep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:vpc-endpoint/vpce-0295d167d12ea4795",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-0295d167d12ea4795",
            "owner_id": "740749460388",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c10a6fcd155d1171"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-deployment/b8b8202cabcced7c",
            "arn_suffix": "app/prod-splunk-alb-deployment/b8b8202cabcced7c",
            "dns_name": "prod-splunk-alb-deployment-1286878645.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-deployment/b8b8202cabcced7c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-deployment",
            "security_groups": [
              "sg-0f479c66d9657f22b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-deployment",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.deployment.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb",
      "name": "mgmt_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-deployment-mgmt/bcf5f3690710fcac",
            "arn_suffix": "net/prod-splunk-nlb-deployment-mgmt/bcf5f3690710fcac",
            "dns_name": "prod-splunk-nlb-deployment-mgmt-bcf5f3690710fcac.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-deployment-mgmt/bcf5f3690710fcac",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-deployment-mgmt",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-nlb-deployment-mgmt",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-deployment/b8b8202cabcced7c/f8ab9b8b7c2d3968",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-deployment/b8b8202cabcced7c/f8ab9b8b7c2d3968",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-deployment/b8b8202cabcced7c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.deployment.aws_alb.load_balancer",
            "module.deployment.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-deployment/b8b8202cabcced7c/907e0f631489e367",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-deployment/a7d57e901cbf5895",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-deployment/b8b8202cabcced7c/907e0f631489e367",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-deployment/b8b8202cabcced7c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.deployment.aws_alb.load_balancer",
            "module.deployment.aws_alb_target_group.lb_target_8000",
            "module.deployment.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "nlb_8089",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-deployment-mgmt/bcf5f3690710fcac/5f777c8b8fc797a4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-deployment-mgmt/469c1f94fd7713d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-deployment-mgmt/bcf5f3690710fcac/5f777c8b8fc797a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-deployment-mgmt/bcf5f3690710fcac",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.deployment.aws_alb.mgmt_lb",
            "module.deployment.aws_alb_target_group.nlb_target_8089"
          ]
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-deployment/a7d57e901cbf5895",
            "arn_suffix": "targetgroup/prod-splunk-alb-8000-deployment/a7d57e901cbf5895",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/en-US/account/login",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-deployment/a7d57e901cbf5895",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8000-deployment",
            "port": 8000,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8000-deployment",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.deployment.aws_alb.load_balancer",
            "module.deployment.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nlb_target_8089",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-deployment-mgmt/469c1f94fd7713d0",
            "arn_suffix": "targetgroup/prod-splunk-nlb-deployment-mgmt/469c1f94fd7713d0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-deployment-mgmt/469c1f94fd7713d0",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-deployment-mgmt",
            "port": 8089,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-nlb-deployment-mgmt",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-0715d3846275991f4",
            "description": "Security group for splunk sh and forwarders instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0715d3846275991f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f479c66d9657f22b"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-splunk-instance-deployment",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-instance-deployment",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.deployment.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-0f479c66d9657f22b",
            "description": "Security group for splunk ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f479c66d9657f22b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "prod-splunk-alb-deployment",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-deployment",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.forwarder",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-forwarder/09bfb0b413af0066",
            "arn_suffix": "app/prod-splunk-alb-forwarder/09bfb0b413af0066",
            "dns_name": "prod-splunk-alb-forwarder-853564518.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-forwarder/09bfb0b413af0066",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-forwarder",
            "security_groups": [
              "sg-0e66b6e9258f8779c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-forwarder",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.forwarder.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.forwarder",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-forwarder/09bfb0b413af0066/252df88ad11a3089",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-forwarder/09bfb0b413af0066/252df88ad11a3089",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-forwarder/09bfb0b413af0066",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.forwarder.aws_alb.load_balancer",
            "module.forwarder.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.forwarder",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-forwarder/09bfb0b413af0066/582050c07397d6e4",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-forwarder/8e2d2844b0e2e839",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-forwarder/09bfb0b413af0066/582050c07397d6e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-forwarder/09bfb0b413af0066",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.forwarder.aws_alb.load_balancer",
            "module.forwarder.aws_alb_target_group.lb_target_8000",
            "module.forwarder.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.forwarder",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-forwarder/8e2d2844b0e2e839",
            "arn_suffix": "targetgroup/prod-splunk-alb-8000-forwarder/8e2d2844b0e2e839",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/en-US/account/login",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-forwarder/8e2d2844b0e2e839",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8000-forwarder",
            "port": 8000,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8000-forwarder",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.forwarder.aws_alb.load_balancer",
            "module.forwarder.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.forwarder",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-013a0fa89e13c2d34",
            "description": "Security group for splunk sh and forwarders instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013a0fa89e13c2d34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e66b6e9258f8779c"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-splunk-instance-forwarder",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-instance-forwarder",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.forwarder.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.forwarder",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-0e66b6e9258f8779c",
            "description": "Security group for splunk ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e66b6e9258f8779c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "prod-splunk-alb-forwarder",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-forwarder",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_alb",
      "name": "heclb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-hec/8c37a902d07207a8",
            "arn_suffix": "app/prod-splunk-alb-hec/8c37a902d07207a8",
            "dns_name": "internal-prod-splunk-alb-hec-1456360750.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-hec/8c37a902d07207a8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-hec",
            "security_groups": [
              "sg-00290c4cb8043c0e2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02bb68a15c69c57b7"
              },
              {
                "subnet_id": "subnet-04e34d59a76c94fb8"
              },
              {
                "subnet_id": "subnet-0e8d86d222995993e"
              }
            ],
            "subnets": [
              "subnet-02bb68a15c69c57b7",
              "subnet-04e34d59a76c94fb8",
              "subnet-0e8d86d222995993e"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-alb-hec",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.indexers.aws_security_group.hec_lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_alb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-01/31495a4c3f547f5b",
            "arn_suffix": "net/prod-splunk-nlb-indexer-01/31495a4c3f547f5b",
            "dns_name": "prod-splunk-nlb-indexer-01-31495a4c3f547f5b.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-01/31495a4c3f547f5b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-01",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-01",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-02/3f2a00a03f7382a3",
            "arn_suffix": "net/prod-splunk-nlb-indexer-02/3f2a00a03f7382a3",
            "dns_name": "prod-splunk-nlb-indexer-02-3f2a00a03f7382a3.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-02/3f2a00a03f7382a3",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-02",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              }
            ],
            "subnets": [
              "subnet-09b0446a3f0f2aafa"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-02",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-03/517b403cc35a5de6",
            "arn_suffix": "net/prod-splunk-nlb-indexer-03/517b403cc35a5de6",
            "dns_name": "prod-splunk-nlb-indexer-03-517b403cc35a5de6.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-03/517b403cc35a5de6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-03",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-03",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-04/b22ead75195b4b03",
            "arn_suffix": "net/prod-splunk-nlb-indexer-04/b22ead75195b4b03",
            "dns_name": "prod-splunk-nlb-indexer-04-b22ead75195b4b03.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-04/b22ead75195b4b03",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-04",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-04",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-05/956d7df883878c1c",
            "arn_suffix": "net/prod-splunk-nlb-indexer-05/956d7df883878c1c",
            "dns_name": "prod-splunk-nlb-indexer-05-956d7df883878c1c.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-05/956d7df883878c1c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-05",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              }
            ],
            "subnets": [
              "subnet-09b0446a3f0f2aafa"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-05",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-06/73ec7edecbea4209",
            "arn_suffix": "net/prod-splunk-nlb-indexer-06/73ec7edecbea4209",
            "dns_name": "prod-splunk-nlb-indexer-06-73ec7edecbea4209.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-06/73ec7edecbea4209",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-06",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-06",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-07/506a756628e9494d",
            "arn_suffix": "net/prod-splunk-nlb-indexer-07/506a756628e9494d",
            "dns_name": "prod-splunk-nlb-indexer-07-506a756628e9494d.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-07/506a756628e9494d",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-indexer-07",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-indexer-07",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "heclb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-hec/8c37a902d07207a8/86d6b172494a218e",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8088-hec/a7ef3b2f3f447253",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-hec/8c37a902d07207a8/86d6b172494a218e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-hec/8c37a902d07207a8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.heclb",
            "module.indexers.aws_alb_target_group.heclb_target_8088",
            "module.indexers.aws_security_group.hec_lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listen_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-01/31495a4c3f547f5b/f80fe2540301d1c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-01/30a245015ced45ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-01/31495a4c3f547f5b/f80fe2540301d1c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-01/31495a4c3f547f5b",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-02/3f2a00a03f7382a3/7936335f7434a72d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-02/6847540a11137c97",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-02/3f2a00a03f7382a3/7936335f7434a72d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-02/3f2a00a03f7382a3",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-03/517b403cc35a5de6/59506b5ded475c84",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-03/d877c11472066df7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-03/517b403cc35a5de6/59506b5ded475c84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-03/517b403cc35a5de6",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-04/b22ead75195b4b03/f089467f7ad8cac4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-04/599b4b23a6391e74",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-04/b22ead75195b4b03/f089467f7ad8cac4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-04/b22ead75195b4b03",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-05/956d7df883878c1c/41b1bdbf5f90669a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-05/5dec86e9603ebcc4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-05/956d7df883878c1c/41b1bdbf5f90669a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-05/956d7df883878c1c",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-06/73ec7edecbea4209/5c9a26d20095af97",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-06/191ff85b8dfffe19",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-06/73ec7edecbea4209/5c9a26d20095af97",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-06/73ec7edecbea4209",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-07/506a756628e9494d/46da095f327a825a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-07/d484084052734a7a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-indexer-07/506a756628e9494d/46da095f327a825a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-indexer-07/506a756628e9494d",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.indexers.aws_alb.lb",
            "module.indexers.aws_alb_target_group.target_9995"
          ]
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "heclb_target_8088",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8088-hec/a7ef3b2f3f447253",
            "arn_suffix": "targetgroup/prod-splunk-alb-8088-hec/a7ef3b2f3f447253",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/services/collector/health",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8088-hec/a7ef3b2f3f447253",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8088-hec",
            "port": 8088,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-alb-8088-hec",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_9995",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-01/30a245015ced45ea",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-01/30a245015ced45ea",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-01/30a245015ced45ea",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-01",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-01",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-02/6847540a11137c97",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-02/6847540a11137c97",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-02/6847540a11137c97",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-02",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-02",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-03/d877c11472066df7",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-03/d877c11472066df7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-03/d877c11472066df7",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-03",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-03",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-04/599b4b23a6391e74",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-04/599b4b23a6391e74",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-04/599b4b23a6391e74",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-04",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-04",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-05/5dec86e9603ebcc4",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-05/5dec86e9603ebcc4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-05/5dec86e9603ebcc4",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-05",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-05",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-06/191ff85b8dfffe19",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-06/191ff85b8dfffe19",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-06/191ff85b8dfffe19",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-06",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-06",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-07/d484084052734a7a",
            "arn_suffix": "targetgroup/prod-splunk-nlb-9995-indexer-07/d484084052734a7a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-9995-indexer-07/d484084052734a7a",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-9995-indexer-07",
            "port": 9995,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-nlb-9995-indexer-07",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hec_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-00290c4cb8043c0e2",
            "description": "Security group for HEC ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00290c4cb8043c0e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-splunk-alb-hec",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-alb-hec",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.indexers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-0e4a43b9a26702c9d",
            "description": "Security group for Indexers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4a43b9a26702c9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9995,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9995
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 9997,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9997
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00290c4cb8043c0e2"
                ],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9887,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9887
              }
            ],
            "name": "prod-splunk-instance-indexers",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_indexers",
              "Name": "prod-splunk-instance-indexers",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.indexers.aws_security_group.hec_lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-master/b4a13d1add819c3c",
            "arn_suffix": "app/prod-splunk-alb-master/b4a13d1add819c3c",
            "dns_name": "prod-splunk-alb-master-1794936815.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-master/b4a13d1add819c3c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-splunk-alb-master",
            "security_groups": [
              "sg-05a76424c6add8532"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-master",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.master.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb",
      "name": "mgmt_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-master-mgmt/f67ab421762c7ee7",
            "arn_suffix": "net/prod-splunk-nlb-master-mgmt/f67ab421762c7ee7",
            "dns_name": "prod-splunk-nlb-master-mgmt-f67ab421762c7ee7.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-master-mgmt/f67ab421762c7ee7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "prod-splunk-nlb-master-mgmt",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0057ea47be6c0a6e1"
              },
              {
                "subnet_id": "subnet-09b0446a3f0f2aafa"
              },
              {
                "subnet_id": "subnet-0a2528d789dd75efd"
              }
            ],
            "subnets": [
              "subnet-0057ea47be6c0a6e1",
              "subnet-09b0446a3f0f2aafa",
              "subnet-0a2528d789dd75efd"
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-nlb-master-mgmt",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "vpc_id": "vpc-0f9afbd827c17d71a",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-master/b4a13d1add819c3c/59919ae804705036",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-master/b4a13d1add819c3c/59919ae804705036",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-master/b4a13d1add819c3c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.master.aws_alb.load_balancer",
            "module.master.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "load_balancer_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-master/b4a13d1add819c3c/b69b43237b00045d",
            "certificate_arn": "arn:aws:acm:us-east-1:740749460388:certificate/4839e66a-518c-4f9c-9554-2e3227386806",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-master/7b13b1d114f47b7b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/app/prod-splunk-alb-master/b4a13d1add819c3c/b69b43237b00045d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/app/prod-splunk-alb-master/b4a13d1add819c3c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "module.master.aws_alb.load_balancer",
            "module.master.aws_alb_target_group.lb_target_8000",
            "module.master.aws_security_group.lb_sg",
            "module.route53_dns.aws_acm_certificate.cert",
            "module.route53_dns.data.aws_route53_zone.public_zone"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "nlb_8089",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-master-mgmt/f67ab421762c7ee7/259cac16d1e1834b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-master-mgmt/70ec399643ef94e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:listener/net/prod-splunk-nlb-master-mgmt/f67ab421762c7ee7/259cac16d1e1834b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:loadbalancer/net/prod-splunk-nlb-master-mgmt/f67ab421762c7ee7",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.master.aws_alb.mgmt_lb",
            "module.master.aws_alb_target_group.nlb_target_8089"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb_target_8000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-master/7b13b1d114f47b7b",
            "arn_suffix": "targetgroup/prod-splunk-alb-8000-master/7b13b1d114f47b7b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/en-US/account/login",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-alb-8000-master/7b13b1d114f47b7b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "prod-splunk-alb-8000-master",
            "port": 8000,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-8000-master",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.master.aws_alb.load_balancer",
            "module.master.aws_security_group.lb_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "nlb_target_8089",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-master-mgmt/70ec399643ef94e8",
            "arn_suffix": "targetgroup/prod-splunk-nlb-master-mgmt/70ec399643ef94e8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:740749460388:targetgroup/prod-splunk-nlb-master-mgmt/70ec399643ef94e8",
            "lambda_multi_value_headers_enabled": false,
            "name": "prod-splunk-nlb-master-mgmt",
            "port": 8089,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-nlb-master-mgmt",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-024ca26d7e020196b",
            "description": "Security group for splunk sh and forwarders instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024ca26d7e020196b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a76424c6add8532"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "prod-splunk-instance-master",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-instance-master",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          },
          "dependencies": [
            "module.master.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:740749460388:security-group/sg-05a76424c6add8532",
            "description": "Security group for splunk ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a76424c6add8532",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "prod-splunk-alb-master",
            "name_prefix": null,
            "owner_id": "740749460388",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Module": "splunk_sh",
              "Name": "prod-splunk-alb-master",
              "application_name": "splunk",
              "created_by": "Juan Becerra",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9afbd827c17d71a"
          }
        }
      ]
    }
  ]
}